--- a/MQTTChat/Info.plist
+++ b/MQTTChat/Info.plist
@@ -28,5 +28,9 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 </dict>
 </plist>
