Little enhancements and publishing the README

--- a/MQTTChat/Info.plist
+++ b/MQTTChat/Info.plist
@@ -31,6 +31,6 @@
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleLightContent</string>
+	<string>UIStatusBarStyleDefault</string>
 </dict>
 </plist>
